test/invalid/baseline/unknown-generic.txt
Syntax error at line 2 in unknown-generic.widl, since `interface FetchEvent`:
  ResponsePromise<any> default(
                 ^ Unsupported generic type ResponsePromise
